Fixed hero height on IOS.

--- a/less/main.less
+++ b/less/main.less
@@ -36,6 +36,12 @@ svg {
   }
 }
 
+@media (max-width: 42em) {
+  .copy {
+    padding: 1em 2em;
+  }
+}
+
 @media (min-width: 43em) {
   .copy {
     p {
